--- a/hea-articles.html
+++ b/hea-articles.html
@@ -1,4 +1,23 @@
 
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
+
+        <!-- <link rel="stylesheet" href="css/icon-font.css"> -->
+        <link rel="stylesheet" href="css/style.css">
+        <!-- <link rel="shortcut icon" type="image/png" href="img/favicon.png"> -->
+
+        <title>Progoff Intensive Journal Program | For Self-Development</title>
+    </head>
+    <body>
+
+        <div class="expand">
+
+            
 <div class="col-0-of-3" id="side-navigation">
         <header class="header">
             <div class="header__logo-box">
@@ -145,3 +164,135 @@
         </div>
 
     </div>
+
+            <div class="col-3-of-3">
+                <section class="section-inside">
+                  <div class="section-inside-header">
+                    <h5 class="heading-five">Specialized Audiences &mdash; Health  &mdash; Depression</h5>
+
+                    <div class="inside-nav-container">
+                      <hr class="work-hr">
+                    <ul class="inside-nav">
+
+                      <li><a href="depression.html">Overview</a></li>
+                      <span class="vert">&vert;</span>
+                      <li><a href="hea-benefits.html">Benefits</a></li>
+                      <span class="vert">&vert;</span>
+                      <li><a href="hea-endorse.html">Endorsements</a></li>
+                      <span class="vert">&vert;</span>
+                      <li><a href="hea-articles.html">Articles</a></li>
+
+                    </ul>
+                    <hr class="work-hr">
+                  </div>
+
+                  </div>
+                  <div class="section-inside-picture workshop-picture">
+                  </div>
+
+                <div class="section-inside-content">
+                  <h1>Articles</h1>
+
+                                      <ul class="article-link">
+
+                                        <li>
+                                            <a href="lifestories/rose.html">Healing from Sexual Abuse Using the <em>Intensive Journal</em> <sup>&reg;</sup> Method, </a><em> by C.S. Rose</em>
+                                        </li>
+
+
+                                        <li>
+                                            <a href="lifestories/liz.html">Overcoming Trauma, </a><em>by Liz S</em>
+                                        </li>
+
+                                        <li>
+                                            <a href="lifestories/pam.html">The Sudden Loss of a Loved One,
+                        </a><em>by Pam Rivers</em>
+                                        </li>
+
+                                        <li>
+                                            <a href="lifestories/gerald.html">Using the <em>Intensive Journal</em> <sup>&reg;</sup> Method to Cope With Bipolar Disorder
+                                      </a><em>by Gerald C. Johnson</em>
+                                        </li>
+
+
+
+                </div>
+
+                </section>
+
+                
+
+<footer class="footer">
+            <!-- <div class="footer__logo-box">
+                <img src="img/logo-white.gif" alt="logo" class="footer__logo">
+            </div> -->
+            <!-- <div class="row">
+                Sample text ...
+            </div> -->
+            <!-- <div class="row"> -->
+                <!-- <div class="col-1-of-2">
+                    <div class="footer__navigation">
+                        <ul class="footer__list">
+                            <li class="footer__item"><a href="#" class="footer__link">Blog</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">About us</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Contact us</a></li>
+                        </ul>
+                    </div>
+                </div> -->
+                <!-- <div class="col-1-of-2">
+                    <p class="footer__copyright">
+                        Built by <a href="#" class="footer__link">Jonathan</a> for his online .....
+                        Copyright &copy; by ....
+                    </p>
+                </div> -->
+            <!-- </div> -->
+            <div class="row">
+                <div class="col-1-of-2">
+                    <div class="footer__logo-box">
+                        <img src="img/logo-white.gif" alt="logo" class="footer__logo">
+
+                        <p class="footer-text">Progoff
+                            <span class="emphasize">Intensive Journal</span>
+                            <sup>&reg;</sup> Program
+                        </p>
+
+
+                    </div>
+                </div>
+                <div class="col-1-of-2">
+                    <div class="footer__contacts">
+                        <ul class="footer__list">
+                            <li class="footer__item">
+                                <a href="#" class="footer__link"><ion-icon name="mail" class="icon-mail"></ion-icon></a>
+                            </li>
+                            <li class="footer__item">
+                                <a href="#" class="footer__link"><ion-icon name="logo-facebook" class="icon-fb"></ion-icon></a>
+                            </li>
+                            <li class="footer__item">
+                                <a href="#" class="footer__link"><ion-icon name="logo-twitter" class="icon-tw"></ion-icon></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <p>
+                    Built with <ion-icon name="heart" class="icon-moyo"></ion-icon>
+                    in the city of Cleveland, Ohio.
+                </p>
+                <p>
+                    Please reach us at <a class="para_link" href="mailto:info@intensivejournal.org">info@intensivejournal.org</a>
+                </p>
+                <p>
+                    Copyright &copy; 2019 by Dialogue House Associates. All rights reserved.
+                </p>
+            </div>
+        </footer>
+            </div>
+
+        </div>
+
+        <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
+
+    </body>
+</html>
