--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                             <li><a href="features.html">Features and Principles</a></li>
                             <li><a href="dreams.html">Dreams and Imagery</a></li>
                             <li><a href="meditation.html">Entrance Meditation</a></li>
+                            <li><a href="meditation.html">Whole-Life Process</a></li>
                         </ul>
                     </li>
 
@@ -89,6 +90,18 @@
                     <li class="navigation__item">
                         <span class="navigation__link">Specialized Audiences</span>
                         <ul class="navigation__item--nested">
+                            <li>
+                              <a href="#">Health</a>
+                              <ul class="navigation__item--nested--nested">
+                                <li class="nested-list"><a href="add-recovery.html">Addiction Recovery</a></li>
+                                <li class="nested-list"><a href="cancer-support.html">Cancer Support</a></li>
+                                <li class="nested-list"><a href="depression.html">Depression</a></li>
+                                <li class="nested-list"><a href="mindfulness.html">Mindfulness</a></li>
+                                <li class="nested-list"><a href="trauma.html">Trauma</a></li>
+                                <li class="nested-list"><a href="wellness.html">Wellness</a></li>
+                              </ul>
+                            </li>
+
                             <li>
                               <a href="#">Social Service</a>
                               <ul class="navigation__item--nested--nested">
