--- a/hea-benefits.html
+++ b/hea-benefits.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -5,7 +6,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
-
 
         <!-- <link rel="stylesheet" href="css/icon-font.css"> -->
         <link rel="stylesheet" href="css/style.css">
@@ -168,89 +168,109 @@
             <div class="col-3-of-3">
                 <section class="section-inside">
                   <div class="section-inside-header">
-                    <h5 class="heading-five">About the method</h5>
-                    <h1 class="heading-one hr-overview">Dreams and Imagery</h1>
+                    <h5 class="heading-five">Specialized Audiences &mdash; Health  &mdash; Depression</h5>
+
+                    <div class="inside-nav-container">
+                      <hr class="work-hr">
+                    <ul class="inside-nav">
+
+                      <li><a href="depression.html">Overview</a></li>
+                      <span class="vert">&vert;</span>
+                      <li><a href="hea-benefits.html">Benefits</a></li>
+                      <span class="vert">&vert;</span>
+                      <li><a href="hea-endorse.html">Endorsements</a></li>
+                      <span class="vert">&vert;</span>
+                      <li><a href="hea-articles.html">Articles</a></li>
+
+                    </ul>
+                    <hr class="work-hr">
                   </div>
-                  <div class="section-inside-picture dreams-picture">
+
+                  </div>
+                  <div class="section-inside-picture workshop-picture">
                   </div>
 
                 <div class="section-inside-content">
-                  <h1>Dr. Progoff Discusses: Working with Dreams and Imagery </h1>
-                  <h6>Using Dreams and Imagery to Develop Your Life</h6>
-                  <p>
-                    The nature of dreams and images is an expression of what is in the depths of us at the deeper-than-conscious level.
-                    They provide material for the contents of our lives, carrying our seed potential of what our lives can become, and a certain wisdom and guidance for the way this process can take place.
-                     (Whatever I say about dreams applies equally to Twilight Imaging.)
-                  </p>
+                  <h1>Benefits</h1>
 
-                  <p>
-                   We want to have access to that material, not so much to find reasons for our condition, but rather to draw forth leads for the next development that can take place in our lives.
-                   We want to approach our dreams with the question: “to what aspect of my life does it lead me?”
-                  </p>
+                <p>
+                The Intensive Journal method provides specific techniques through our integrated system of writingexercises to help your clients:
+                </p>
 
+                <h6>
+                  Connect with Inner Process
+                </h6>
 
-                  <p>
-                    I feel it is important to emphasize that no one dream or image, taken by itself, is necessarily relevant because it may be a phase of a cycle in our lives.
-                     It is preferable to work with a cluster of dreams and get a feeling for them.
-                     I would rather use the word “cluster” than “series,” because they are not necessarily consecutive in time.
-                  </p>
+                <ul>
+                  <li>Work at a progressively deepening level using the exercisesto connect with their full range of experiences and emotions.</li>
+                  <li>
+                    Connect with inner strengths, capacities and interests to develop greater self-confidence and self-esteem.
+                  </li>
+                  <li>
+                    Gain insights, new perspectives and awareness that provide clarity, hope and understanding.
+                  </li>
+                </ul>
 
-                  <p>
-                  I urge you to refrain from interpreting or analyzing the dream, even if the line of meaning seems self-evident to you.
-                  Also, I think that one of the problems in our habit of thinking about insights or analysis is that they become a place for stopping.
-                  You may say “Oh, I see what it is,” and the process of movement and development ends. Rather, we must let the dream process continue in our lives.
-                  </p>
+                <h6>
+                  Develop Intuitive Capacities
+                </h6>
 
-                  <h6>Developing Our Dreams </h6>
+                <ul>
+                  <li>Use our reflective process without judgment in a nonanalytical framework to become more receptive to intuitions</li>
+                  <li>
+                  Heighten abilities to listen to and trust their inner process.
+                  </li>
+                  <li>
+                    Become more observant about behavior andthought patterns. Acknowledge negative feelings and situation in life as a starting point for developing one's life.
+                  </li>
+                </ul>
 
-                  <p>
-                    We have a number of procedures and places in the Intensive Journal workbook to open out and develop our dreams.
-                     The dream content may be readily apparent and can be taken at face value.
-                     In working with a dream about a person, that person may remind you of some event which could be described as a memory in the Life History Log section.
-                     You may enter into a dialogue in the Dialogue with Persons section where the relationship is immediately significant. The dream may lead you to a variety of other sections.
-                  </p>
+                <h6>
+                Employ a Safe Process
+                </h6>
 
-                  <p>
-                    On the other hand, the symbolism may be obscure.
-                     We have two principal ways to develop our dreams further.
-                   </p>
+                <ul>
+                  <li>Work through specific issues within the context of one's entire life using Progoff's "whole life" process.  (see p 2) </li>
+                  <li>
+                  Deal with issues as far as appropriate at the time that can be revisited at a later date.
+                  </li>
 
-                   <ul>
-                     <li><h6> Reconstructing and Extending the Dreaming Process </h6></li>
-                     <p>
-                      First, we may go back to the twilight and let the process of dreaming pick up and continue.
-                       After all, any dream that we remember is just an excerpt of the larger dreaming process because we did not remember it all.
-                        We can reconstruct the way the dreams and images have been taking place, moving back in time so that we can get a sense on a deeper than conscious level of the way the future is trying to unfold.
-                        We feel our dreams and images and reconstruct them in the Dream Enlargement and Imagery Extension sections.
-                     </p>
-                     <p>
-                    To reconstruct does not mean to interpret, but rather to put ourselves back into the process of dreaming (or imaging), and let ourselves feel it and let it continue itself.
-                    We are picking up those images and letting them extend. We call this process Twilight Dreaming.
-                     </p>
+                </ul>
 
-                     <p>
-                      A major reason why I prefer to speak of the twilight state rather than the dream state is that at the twilight level, we can remember more and we can move around more.
-                       Because we are awake at the same time that a non-conscious process is moving in us, twilight imaging is very often the most fertile place to work, and is probably, in the long run, more fruitful for us than relying on dreams.
-                        We have access to material from the deeper than conscious level even if we do not dream or remember our dreams.
-                     </p>
+                <h6>
+                Utilize Meditation Techniques to Enhance Mindfulness
+                </h6>
 
-                     <li><h6>Correlating to Areas of Our Lives</h6></li>
-                       <p>
-                         Second, we may see the correlation or parallel between the process that is in the dream and what is taking place in our lives.
-                          Our lives move outward and forward until something happens that stops or blocks the process.
-                         Then, they move in and backward and down into the deeper than conscious level, back in time to some part of our past experience that may be relevant to the issues at present.
-                       </p>
-                       <p>
-                         As we read back a cluster of dreams, feeling their tone, quality, atmosphere and movement, we ask: “to what aspect or time in my life do these dreams seem to correspond?” The dreams may lead to more than one possible area, and you may work through each one of them.
-                          We work from the perspective that we do not need final answers or endings.
-                         We are really looking for leads that will progressively open up areas of our lives.
-                       </p>
+                <ul>
+                  <li>Apply <em>Entrance Meditation</em> &trade; techniques, a key part of the method, that creates a deepening atmosphere to help clientsbecome centered and focused to perceive a larger realm of reality. </li>
+                  <li>
+                  Deal with issues as far as appropriate at the time that can be revisited at a later date.
+                  </li>
+                </ul>
 
-                   </ul>
+                <h6>
+              Generate Greater Integration and Wholeness
+                </h6>
 
+                <ul>
+                  <li>Obtain new crystallizations of awareness from diverse areas of life using the <em>Journal Feedback</em> process (see p 2).  These new integrations constitute the ongoing growth that is possible through this method.</li>
+                  <li>
+                  Use new awareness to make decisions for next steps; develop greater momentum, motivation, and action.
+                  </li>
+                  <li>
+                    Take greater interest in and control for developing one's life.
+                  </li>
+                </ul>
+
+                <h6>
+              Become More Productive in Using Other Modalities
+                </h6>
+
+                <ul>
+                  <li>Use the<em> Intensive Journal</em> method to stimulate awareness and insights to complement other services such as therapy.</li>
+                </ul>
 
                 </div>
-
 
                 </section>
 
@@ -324,10 +344,7 @@
         </footer>
             </div>
 
-
-
         </div>
-
 
         <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 
