--- a/hea-endorse.html
+++ b/hea-endorse.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -5,7 +6,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
-
 
         <!-- <link rel="stylesheet" href="css/icon-font.css"> -->
         <link rel="stylesheet" href="css/style.css">
@@ -168,89 +168,72 @@
             <div class="col-3-of-3">
                 <section class="section-inside">
                   <div class="section-inside-header">
-                    <h5 class="heading-five">About the method</h5>
-                    <h1 class="heading-one hr-overview">Dreams and Imagery</h1>
+                    <h5 class="heading-five">Specialized Audiences &mdash; Health  &mdash; Depression</h5>
+
+                    <div class="inside-nav-container">
+                      <hr class="work-hr">
+                    <ul class="inside-nav">
+
+                      <li><a href="depression.html">Overview</a></li>
+                      <span class="vert">&vert;</span>
+                      <li><a href="hea-benefits.html">Benefits</a></li>
+                      <span class="vert">&vert;</span>
+                      <li><a href="hea-endorse.html">Endorsements</a></li>
+                      <span class="vert">&vert;</span>
+                      <li><a href="hea-articles.html">Articles</a></li>
+
+                    </ul>
+                    <hr class="work-hr">
                   </div>
-                  <div class="section-inside-picture dreams-picture">
+
+                  </div>
+                  <div class="section-inside-picture workshop-picture">
                   </div>
 
                 <div class="section-inside-content">
-                  <h1>Dr. Progoff Discusses: Working with Dreams and Imagery </h1>
-                  <h6>Using Dreams and Imagery to Develop Your Life</h6>
+                  <h1>Endorsements</h1>
+<!--
                   <p>
-                    The nature of dreams and images is an expression of what is in the depths of us at the deeper-than-conscious level.
-                    They provide material for the contents of our lives, carrying our seed potential of what our lives can become, and a certain wisdom and guidance for the way this process can take place.
-                     (Whatever I say about dreams applies equally to Twilight Imaging.)
-                  </p>
+                    <strong>Endorsement Statements from Individuals Dealing With Depression</strong>
+                  </p> -->
 
-                  <p>
-                   We want to have access to that material, not so much to find reasons for our condition, but rather to draw forth leads for the next development that can take place in our lives.
-                   We want to approach our dreams with the question: “to what aspect of my life does it lead me?”
-                  </p>
+                  <h6>
+                    Endorsement Statements from Individuals Dealing With Depression
+                  </h6>
 
+              <div class="quotes">
+                <blockquote>
+              "My body feels fat and my heart heavy, both weighed down by a dense fog of depression and grief....For many years, I have used the Intensive Journal method as a guide out of the darkest places of pain; no  matter how lost I  feel....The weeks and months following the suicide of my brother-in-law were among the darkest times I have known....The Intensive Journal process offered me the structure and tools for healing and growth...Using the process, one can work through seemingly overwhelming feelings of abandonment, emptiness, and anger, and eventually find a way to peace."
+                    </blockquote>
+                        <p class="right-span">Pam Rivers<br>
+                        Author of Life History article "The Sudden Loss of a Loved One"</p>
+                  </div>
 
-                  <p>
-                    I feel it is important to emphasize that no one dream or image, taken by itself, is necessarily relevant because it may be a phase of a cycle in our lives.
-                     It is preferable to work with a cluster of dreams and get a feeling for them.
-                     I would rather use the word “cluster” than “series,” because they are not necessarily consecutive in time.
-                  </p>
+                  <div class="quotes">
+                    <blockquote>
+              "I had to confront the issue of sexual abuse again. I was so anxious, angry and depressed...The Intensive Journal method helped me to access and develop these aspeects of my life and broadened my awareness of new possibilities for me. I realized that I had defined my life narrowly.  In dealing with my depression I realized that I was in survival mode.  It had never occured to me to see my life as having positive aspects to it, as somehow trying to evolve.  As I worked in these different areas of my Intensive Journal workbook, clues about my interests surfaced."
+                        </blockquote>
+                            <p class="right-span">CS Rose<br>
+                            Author of Life History article "Healing from Sexual Abuse Using the Intensive Journal Method"</p>
+                      </div>
 
-                  <p>
-                  I urge you to refrain from interpreting or analyzing the dream, even if the line of meaning seems self-evident to you.
-                  Also, I think that one of the problems in our habit of thinking about insights or analysis is that they become a place for stopping.
-                  You may say “Oh, I see what it is,” and the process of movement and development ends. Rather, we must let the dream process continue in our lives.
-                  </p>
-
-                  <h6>Developing Our Dreams </h6>
-
-                  <p>
-                    We have a number of procedures and places in the Intensive Journal workbook to open out and develop our dreams.
-                     The dream content may be readily apparent and can be taken at face value.
-                     In working with a dream about a person, that person may remind you of some event which could be described as a memory in the Life History Log section.
-                     You may enter into a dialogue in the Dialogue with Persons section where the relationship is immediately significant. The dream may lead you to a variety of other sections.
-                  </p>
-
-                  <p>
-                    On the other hand, the symbolism may be obscure.
-                     We have two principal ways to develop our dreams further.
-                   </p>
-
-                   <ul>
-                     <li><h6> Reconstructing and Extending the Dreaming Process </h6></li>
-                     <p>
-                      First, we may go back to the twilight and let the process of dreaming pick up and continue.
-                       After all, any dream that we remember is just an excerpt of the larger dreaming process because we did not remember it all.
-                        We can reconstruct the way the dreams and images have been taking place, moving back in time so that we can get a sense on a deeper than conscious level of the way the future is trying to unfold.
-                        We feel our dreams and images and reconstruct them in the Dream Enlargement and Imagery Extension sections.
-                     </p>
-                     <p>
-                    To reconstruct does not mean to interpret, but rather to put ourselves back into the process of dreaming (or imaging), and let ourselves feel it and let it continue itself.
-                    We are picking up those images and letting them extend. We call this process Twilight Dreaming.
-                     </p>
-
-                     <p>
-                      A major reason why I prefer to speak of the twilight state rather than the dream state is that at the twilight level, we can remember more and we can move around more.
-                       Because we are awake at the same time that a non-conscious process is moving in us, twilight imaging is very often the most fertile place to work, and is probably, in the long run, more fruitful for us than relying on dreams.
-                        We have access to material from the deeper than conscious level even if we do not dream or remember our dreams.
-                     </p>
-
-                     <li><h6>Correlating to Areas of Our Lives</h6></li>
-                       <p>
-                         Second, we may see the correlation or parallel between the process that is in the dream and what is taking place in our lives.
-                          Our lives move outward and forward until something happens that stops or blocks the process.
-                         Then, they move in and backward and down into the deeper than conscious level, back in time to some part of our past experience that may be relevant to the issues at present.
-                       </p>
-                       <p>
-                         As we read back a cluster of dreams, feeling their tone, quality, atmosphere and movement, we ask: “to what aspect or time in my life do these dreams seem to correspond?” The dreams may lead to more than one possible area, and you may work through each one of them.
-                          We work from the perspective that we do not need final answers or endings.
-                         We are really looking for leads that will progressively open up areas of our lives.
-                       </p>
-
-                   </ul>
-
+                  <div class="quotes">
+                    <blockquote>
+        "The Intensive Journal method strengthened me in my struggles with depression and anxiety.  I am plagued less often by despair and suicidal thoughts....I am also learning to accept myself and appreciate myself for who I am instead of what I do or am no longer able to do....For the first time in 41 years, I am learning to be comfortable in my own skin."
+                        </blockquote>
+                            <p class="right-span">Liz S<br>
+                            Author of Life History article "Overcoming Trauma"</p>
+                      </div>
+                                        <div class="quotes">
+                                          <blockquote>
+                                            “Since my diagnosis [of bipolar disorder], the Journal has guided me in working through feelings regarding my condition and in my understanding my mood changes.  It has become a true ally...<br>
+                                      		“The Journal enabled me to express my feelings in an uninhibited manner....My own resistance towards my feelings regarding the condition slowly broke away.   I was able to move towards an honesty within myself.  Finally, the denial I had been clinging to as my only defense diminished.”
+                                              </blockquote>
+                                                  <p class="right-span">Gerald C Johnson<br>
+                                                  Author of Life History article “Using the Intensive Journal®  Method to Cope with Bipolar Disorder”</p>
+                                            </div>
 
                 </div>
-
 
                 </section>
 
@@ -324,10 +307,7 @@
         </footer>
             </div>
 
-
-
         </div>
-
 
         <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 
