--- a/tr-benefits.html
+++ b/tr-benefits.html
@@ -64,7 +64,7 @@
                             <li><a href="features.html">Features and Principles</a></li>
                             <li><a href="dreams.html">Dreams and Imagery</a></li>
                             <li><a href="meditation.html">Entrance Meditation</a></li>
-                            <li><a href="meditation.html">Whole-Life Process</a></li>
+                            <li><a href="whole-life.html">Whole-Life Process</a></li>
                         </ul>
                     </li>
 
@@ -246,7 +246,7 @@
                 </h6>
 
                 <ul>
-                  <li>Avoid preconceived ways of thinking that create a stalemate by using the Journal Feedback process, a core feature of the method (see page 2).</li>
+                  <li>Avoid preconceived ways of thinking that create a stalemate by using the Journal Feedback process, a core feature of the method, see <a href="feedback.html" class="page-link">Journal Feedback process</a></li>
                   <li>
                  Develop next steps in major areas such as personal relationships, career, special interests, body and health, etc.
                   </li>
@@ -257,7 +257,7 @@
                 </h6>
 
                 <ul>
-                  <li>View specific issues within the context of one's entire life using Progoff's whole-life process (p 2);  realize connections between areas of life using the Journal Feedback technique.</li>
+                  <li>View specific issues within the context of one's entire life using Progoff's whole-life process (see <a href="whole-life.html" class="page-link">Whole-Life Process</a>);  realize connections between areas of life using the Journal Feedback technique.</li>
                   <li>
               Work through challenges as they arise over time; gain greater control and direction; learn a tool and structure to use throughout life
                   </li>
