--- a/trauma.html
+++ b/trauma.html
@@ -64,7 +64,7 @@
                             <li><a href="features.html">Features and Principles</a></li>
                             <li><a href="dreams.html">Dreams and Imagery</a></li>
                             <li><a href="meditation.html">Entrance Meditation</a></li>
-                            <li><a href="meditation.html">Whole-Life Process</a></li>
+                            <li><a href="whole-life.html">Whole-Life Process</a></li>
                         </ul>
                     </li>
 
@@ -189,40 +189,25 @@
                   </div>
 
                 <div class="section-inside-content">
-                  <h1>Overview*</h1>
+                  <h1>Overview</h1>
 
-                  <p class="u-margin-bottom-small">
-              The Progoff&trade; methodology provides practical techniques to:
-                  </p>
-                  <ul>
-                    <li>
-                      Work through issues in a supportive and safe environment, relating to feelings about 		other ethnic/racial/ religious groups in the community;
-                    </li>
-                    <li>
-                      By-pass preconceived ways of thinking to achieve dramatic breakthroughs;
-                    </li>
-                    <li>
-                      Provide opportunities for bonding between members of groups that hold intense hostile feelings toward each other;
-                    </li>
-                    <li>
-                      Benefit from major economies of scale and savings created by members doing in-depth
-	work in a group setting under the auspices of our certified instructor.
-                    </li>
-                  </ul>
+<p>
+  Intensive Journal workshops have helped survivors of trauma deal with
+many painful and emotional issues.  Participants benefit from working in
+a supportive environment protected by total privacy, and nurtured by a
+group that provides an energy and momentum to move through issues.
+</p>
 
-                  <p>
-                    The Intensive Journal method offers many unique features for dramatically helping your group.
-                  </p>
-
+<p>
+  Our exercises help survivors access and work through feelings of pain
+  and guilt, in a safe way; they are in control of how far their can move
+  through an issue.  Through this process, they can gain clarity and
+  insights as well as a sense of peace to move forward in life.
+</p>
                   <p>
                     For a brochure on depression, <a href="trauma-2019.pdf" target="_blank" class="page-link">click here.</a>
                   </p>
 
-                  <hr class="trademark-line u-margin-top-small">
-
-                  <p>
-                  <strong>*</strong> Depression may be caused by a variety of factors, whether physical (i.e. chemical imbalance) or mental.  The <em>Progoff</em> methodology is intended for use by certain individuals who may have depression that has been caused at least in part by underlying issues in their lives. This brochure is addressed to health care professionals treating clients with depression as a component of their diagnosis.
-                  </p>
 
                 </div>
 
