--- a/add-recovery.html
+++ b/add-recovery.html
@@ -64,7 +64,7 @@
                             <li><a href="features.html">Features and Principles</a></li>
                             <li><a href="dreams.html">Dreams and Imagery</a></li>
                             <li><a href="meditation.html">Entrance Meditation</a></li>
-                            <li><a href="meditation.html">Whole-Life Process</a></li>
+                            <li><a href="whole-life.html">Whole-Life Process</a></li>
                         </ul>
                     </li>
 
@@ -195,6 +195,10 @@
 
     <p>
       The <em>Progoff</em> methodology has been used by those in recovery to help them overcome an addiction. It can help a person work through several issues that may have contributed to the addiction. Several participants have used the <em>Intensive Journal </em> method because they see common themes with the popular 12-Step approach.
+    </p>
+
+    <p>
+      For a brochure on depression, <a href="substance-abuse-4-2019.pdf" target="_blank" class="page-link">click here.</a>
     </p>
 
                 </div>
