--- a/nursing.html
+++ b/nursing.html
@@ -65,7 +65,7 @@
                             <li><a href="features.html">Features and Principles</a></li>
                             <li><a href="dreams.html">Dreams and Imagery</a></li>
                             <li><a href="meditation.html">Entrance Meditation</a></li>
-                            <li><a href="meditation.html">Whole-Life Process</a></li>
+                            <li><a href="whole-life.html">Whole-Life Process</a></li>
                         </ul>
                     </li>
 
