Contemplative Practice section

--- a/cont-benefits.html
+++ b/cont-benefits.html
@@ -200,81 +200,70 @@
                   </div>
 
                 <div class="section-inside-content">
-                  <h1>Overview</h1>
-
-<p>
-Beginning in the early 1950s, Dr. Progoff was a leading proponent of the importance of spiritual development as an overall component of psychological healing and growth.
-</p>
-
-<p>
-  Progoff wrote one of the leading introductory commentaries and translations on <em>The Cloud of Unknowing</em> by the 14th century anonymous monk as he describes how individuals can become connected to God.
-</p>
-
-<blockquote>
-  "What is separating man from God is not any physical thing but the state of his consciousness.
-More specifically, it is man's consciousness of his separateness, of his existence as an individual
-apart from God that keeps him separated from God. To overcome this awareness of separateness, he must place himself in a psychological situation that weakens, and ultimately dispenses
-with, the conscious guidance of his personal being. He must permit himself to drop into a
-condition of unconsciousness, a condition of total unknowing. This encompassing state of
-unknowing is the cloud of unknowing that covers him in darkness, dulls his awareness of his
-separate existence, and provides the medium in which his union with God may take place." <sup>1</sup>
-</blockquote>
-<p class="right-span">
-  <strong>Ira Progoff, PhD</strong></p>
-<p>
-  Dr Progoff’s approach to psychotherapy and then implemented in the Intensive Journal method stressed the importance of creating a conducive atmosphere and approaches for connecting with your true inner self.  He emphasized:
-</p>
-
-<h6>Direct ongoing experience</h6>
-<blockquote>
-  "There is no use in one person attempting to tell another person what the
-  meaning of life is. It involves too intimate an awareness. A major part of the
-  meaning of life is contained in the very process of discovering it. It is an
-  ongoing experience of growth that involves a deepening of contact with
-  reality....The meaning of life cannot be told; it has to happen to a person"
-<sup>2</sup>
-</blockquote>
-
-<h6 class="u-margin-top-small">Silence and privacy</h6>
-<blockquote>
-  "Spiritual contact, the awareness of the profounder meanings of life and the
-  experience of its symbols, is an individual endeavor that can be carried through
-  only in the silence of privacy."
-<sup>3</sup>
-</blockquote>
-
-<h6 class="u-margin-top-small">Working at an inner level</h6>
-<blockquote>
-  "When our attention is focused inwardly at the depth of our being in the
-  context of the wholeness of our life, resources for a profound knowledge of life
-  become accessible to us."
-<sup>4</sup>
-</blockquote>
-<p>&nbsp;</p>
-
+                  <h1>Benefits</h1>
 
                   <p>
-                    For a brochure on contemplative practice, <a href="spiritual-contemplative-3-2018.pdf" target="_blank" class="page-link">click here.</a>
+                    The Intensive Journal method can serve as a valuable resource, a companion on your journey for
+ongoing spiritual growth
                   </p>
+
+            <h6 class="u-margin-top-small">
+              Learn Practical Exercises for Connecting With the Spiritual Dimension
+            </h6>
+            <ul>
+              <li>
+                Deepen your experience of the Sacred in your life.
+              </li>
+              <li>Discern the deep inner purpose and direction of your life as it
+can be lived most authentically in the world.</li>
+<li>Connect with and develop greater awareness of religious/spiritual experiences</li>
+<li>Clarify beliefs, priorities, truths, purpose and religious/spiritual experiences</li>
+<li>Use Progoff's technique of inner dialogue to connect with the wisdom of spiritual
+figures to obtain clarity and understanding to resolve issues</li>
+            </ul>
+
+            <h6 class="u-margin-top-small">
+              Connect With Many Facets of Your Life
+            </h6>
+            <ul>
+<li>Develop a foundation on your life as you work in many areas to create a
+more meaningful life. Examples include personal relationships, career/special
+interests, body and health, dreams and imagery, and your life history.
+</li>
+<li>Realize connections and relationships between different areas of your life and the
+spiritual component. Gaining self-knowledge helps you deepen spiritually.</li>
+            </ul>
+
+            <h6 class="u-margin-top-small">
+              Experience a Workshop Atmosphere Conducive for Contemplation
+            </h6>
+            <ul>
+<li>Increase your attentiveness to recognizing many different facets
+of experience. Become more receptive to hearing your inner voice
+</li>
+<li>Benefit from a deepening workshop experience away from your
+daily routine to connect with your inner self.</li>
+<li>Apply a neutral meditative process for becoming centered and
+deepening your inward journey</li>
+            </ul>
+
+            <h6 class="u-margin-top-small">
+              Discover Your True Self
+            </h6>
+            <ul>
+<li>Use nonjudgmental, non-analytical techniques in a meditative atmosphere to
+become centered, bypassing preconceived ways of thinking
+</li>
+<li>Apply exercises to connect with your inner process in total privacy to be honest
+with yourself.</li>
+<li>Employ the Journal Feedback TM process to develop new integrations of awareness
+as you move toward greater wholeness, see <a href="feedback.html" class="page-link">Journal Feedback Technique</a></li>
+            </ul>
+
+
+
 
                   <hr class="trademark-line u-margin-top-small">
-
-                  <p>
-                    <sup>1</sup>
-                    <em>The Cloud of Unknowing,</em> by Ira Progoff, PhD, page 34.
-                  </p>
-                  <p>
-                    <sup>2</sup>
-                    <em>The Symbolic and the Real,</em>  by Ira Progoff, PhD, pages 13-14
-                  </p>
-                  <p>
-                    <sup>3</sup>
-                    <em>At a Journal Workshop,</em> page 5.
-                  </p>
-                  <p>
-                    <sup>4</sup>
-                    <em>At a Journal Workshop,</em> page 9.
-                  </p>
 
                 </div>
 
