--- a/cont-endorse.html
+++ b/cont-endorse.html
@@ -200,81 +200,83 @@
                   </div>
 
                 <div class="section-inside-content">
-                  <h1>Overview</h1>
-
-<p>
-Beginning in the early 1950s, Dr. Progoff was a leading proponent of the importance of spiritual development as an overall component of psychological healing and growth.
-</p>
-
-<p>
-  Progoff wrote one of the leading introductory commentaries and translations on <em>The Cloud of Unknowing</em> by the 14th century anonymous monk as he describes how individuals can become connected to God.
-</p>
-
-<blockquote>
-  "What is separating man from God is not any physical thing but the state of his consciousness.
-More specifically, it is man's consciousness of his separateness, of his existence as an individual
-apart from God that keeps him separated from God. To overcome this awareness of separateness, he must place himself in a psychological situation that weakens, and ultimately dispenses
-with, the conscious guidance of his personal being. He must permit himself to drop into a
-condition of unconsciousness, a condition of total unknowing. This encompassing state of
-unknowing is the cloud of unknowing that covers him in darkness, dulls his awareness of his
-separate existence, and provides the medium in which his union with God may take place." <sup>1</sup>
-</blockquote>
-<p class="right-span">
-  <strong>Ira Progoff, PhD</strong></p>
-<p>
-  Dr Progoff’s approach to psychotherapy and then implemented in the Intensive Journal method stressed the importance of creating a conducive atmosphere and approaches for connecting with your true inner self.  He emphasized:
-</p>
-
-<h6>Direct ongoing experience</h6>
-<blockquote>
-  "There is no use in one person attempting to tell another person what the
-  meaning of life is. It involves too intimate an awareness. A major part of the
-  meaning of life is contained in the very process of discovering it. It is an
-  ongoing experience of growth that involves a deepening of contact with
-  reality....The meaning of life cannot be told; it has to happen to a person"
-<sup>2</sup>
-</blockquote>
-
-<h6 class="u-margin-top-small">Silence and privacy</h6>
-<blockquote>
-  "Spiritual contact, the awareness of the profounder meanings of life and the
-  experience of its symbols, is an individual endeavor that can be carried through
-  only in the silence of privacy."
-<sup>3</sup>
-</blockquote>
-
-<h6 class="u-margin-top-small">Working at an inner level</h6>
-<blockquote>
-  "When our attention is focused inwardly at the depth of our being in the
-  context of the wholeness of our life, resources for a profound knowledge of life
-  become accessible to us."
-<sup>4</sup>
-</blockquote>
-<p>&nbsp;</p>
 
 
-                  <p>
-                    For a brochure on contemplative practice, <a href="spiritual-contemplative-3-2018.pdf" target="_blank" class="page-link">click here.</a>
-                  </p>
+                  <h1>Endorsements</h1>
+
+                  <div class="quotes">
+                    <p><strong></strong></p>
+                    <blockquote>
+                      "[The Intensive Journal method is] a modern
+      system for achieving the deeper listening that
+      brings a sense of God's presence, peace and
+      will....on the way to our deeper self...that
+      deeper awareness, and the power for Godly
+      living that flows from it, is a practical way of
+      speaking of the Intensive Journal method....Of
+      all the spiritual disciplines that I have used
+      across the years, this one has been the most
+      dependable in keeping me on track, energized
+      and focused."<sup>1</sup>
+                        </blockquote>
+                            <p class="right-span">Rev Wallace Chappell<br>
+                            Dallas, TX</p>
+                      </div>
+                  <div class="quotes">
+                    <p><strong></strong></p>
+                    <blockquote>
+                      What appears on the surface to be an inner dialogue between myself and contents of my past is, from the
+                  perspective of faith, a dialogue in which I listen to God speaking to me from within my own life / experience.
+                  The Intensive Journal structure is a vehicle for such interior dialogue, which is a form of prayer.
+<br class="u-margin-top-small">
+                  "...The object of each individual life / process is to establish and maintain contact with the God of all. The
+                  procedure of moving toward that objective is the practice of a spirituality of experience. It is my position that
+                  Ira Progoff's Intensive Journal method is a link between inner renewal and the outer life ....It is an introduction
+                  to a spirituality of experience.""<sup>1</sup>
+                        </blockquote>
+                            <p class="right-span">Fr John McMurry, SS<br>
+                            Former Director, St Mary 's Spiritual Center, Baltimore, Maryland</p>
+                      </div>
+
+                  <div class="quotes">
+                    <p><strong></strong></p>
+                    <blockquote>
+                      “I have found the Intensive Journal method to be an
+excellent complement to centering prayer/contemplative
+practice in which I have practiced for over 20 years. It
+provides many practical exercises for conducting the deep
+inner work for connecting with my true self and experiencing God’s presence within.
+<br class="u-margin-top-small">
+Conducted in a quiet reflective atmosphere, the Intensive
+Journal method is compatible with our practices in
+centering prayer/contemplative practice, a companion on
+my lifelong journey of self-discovery and spiritual growth.
+I strongly encourage you to attend these workshops."
+                        </blockquote>
+                            <p class="right-span">Mary Kaplan LPC<br>
+                            Commissioned Presenter of Centering Prayer<br>
+                          Introductory Workshops, Phoenix, AZ</p>
+                      </div>
+
+                  <div class="quotes">
+                    <p><strong></strong></p>
+                    <blockquote>
+                      "The Intensive Journal method is a dynamic tool and
+practice I use to support my contemplative life, helping me to understand the transformation process, uncover my true self, and live the life I was meant to live.
+<br class="u-margin-top-small">
+"The Intensive Journal workshops helped me to
+affirm the meaning and purpose of my life, to look for
+any new direction I want to take, to touch into any
+places that still needed healing, and to uncover
+creative energies. The workshop experience helped
+deepen my insights and self-knowledge in a way that
+gives me great satisfaction."
+                        </blockquote>
+                            <p class="right-span">Julie Saad<br>
+                            Denver, CO</p>
+                      </div>
 
                   <hr class="trademark-line u-margin-top-small">
-
-                  <p>
-                    <sup>1</sup>
-                    <em>The Cloud of Unknowing,</em> by Ira Progoff, PhD, page 34.
-                  </p>
-                  <p>
-                    <sup>2</sup>
-                    <em>The Symbolic and the Real,</em>  by Ira Progoff, PhD, pages 13-14
-                  </p>
-                  <p>
-                    <sup>3</sup>
-                    <em>At a Journal Workshop,</em> page 5.
-                  </p>
-                  <p>
-                    <sup>4</sup>
-                    <em>At a Journal Workshop,</em> page 9.
-                  </p>
 
                 </div>
 
