--- a/sp-testimonial.html
+++ b/sp-testimonial.html
@@ -16,7 +16,6 @@
     <body>
 
         <div class="expand">
-
             
 <div class="col-0-of-3" id="side-navigation">
         <header class="header">
@@ -196,29 +195,38 @@
         </div>
 
     </div>
-
             <div class="col-3-of-3">
                 <section class="section-inside">
                   <div class="section-inside-header">
-                    <h5 class="heading-five">Specialized Audiences &mdash; Professional Development</h5>
+                    <h5 class="heading-five">Specialized Audiences &mdash; Spirituality  &mdash; Spiritual Direction</h5>
 
                     <div class="inside-nav-container">
                       <hr class="work-hr">
                     <ul class="inside-nav">
 
-                      <li><a href="pro-writersgen.html">Overview</a></li>
+                      <li><a href="sp-testimonial.html">Overview</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="gen-writing.html">General Writing</a></li>
+                      <li><a href="testimonials\test-catholic.html">Catholic</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="writ-edu.html">Education</a></li>
+                      <li><a href="testimonials\test-christdis.html">Disciples of Christ</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="mem-writing.html">Memoir Writing</a></li>
+                      <li><a href="testimonials\test-episcopal.html">Episcopal</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="writ-poetry.html">Poetry</a></li>
+                      <li><a href="testimonials\test-methodist.html">Methodist</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="writ-endorse.html">Endorsements</a></li>
+                      <li><a href="testimonials\test-newthought.html">New Thought</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="writ-articles.html">Writers' Statements</a></li>
+                      <li><a href="testimonials\test-presby.html">Presbyterian</a></li>
+                      <span class="vert">&vert;</span>
+                      <li><a href="testimonials\test-quaker.html">Quaker</a></li>
+                      <span class="vert">&vert;</span>
+                      <li><a href="testimonials\test-unitarian.html">Unitarian</a></li>
+                      <span class="vert">&vert;</span>
+                      <li><a href="testimonials\test-united.html">United Church of Christ</a></li>
+                      <span class="vert">&vert;</span>
+                      <li><a href="testimonials\test-unity.html">Unity</a></li>
+                      <span class="vert">&vert;</span>
+
 
                     </ul>
                     <hr class="work-hr">
@@ -229,23 +237,21 @@
                   </div>
 
                 <div class="section-inside-content">
-                  <h1>General Writing</h1>
+                  <h1>Testimonials by Religion</h1>
 
                   <p>
-          General writing includes all literary forms, ranging from nonfiction to poetry to prose. Writing is a craft that requires self-awareness and skill, creativity and resolve. The Progoff Intensive Journal Method is a tool that puts you in contact with your inner processes and opens new doors of self-discovery and insight. It can help you crystallize an idea for your writing, and guide you in a useful direction for your writing projects. The symbols and imagery developed through the use of the Intensive Journal method create a flow of information that can free you to write about whatever comes to mind, creating work that is spontaneous and open. The movement and freedom the method provides opens up endless creative possibilities, helping you overcome writer’s block or just gain a new perspective on your work.
+                    Since our method is neutral with regard to any particular dogma, people of different faiths who have attended our workshops share their conclusions as to why they value our program for both themselves and their congregations.
                   </p>
 
-                  <div class="quotes">
-                    <blockquote>
-                  "I am convinced that aspiring writers can get new direction and inspiration from attending a Progoff Intensive Journal workshop. You can learn some helpful techniques such as the dialogue process for which Progoff is a leading authority. The method spurs your creativity as you access ideas and thoughts inside yourself as well listen to your intuition. The Intensive Journal method can be used in an ongoing way to help you clarify how best to proceed as your writing project evolves. Helping you realize your creative potential as a writer is a great gift of the Intensive Journal method."</blockquote>
-                    <p class="right-span">Cornelius Vahle, Jr.<br>
-                    San Francisco, CA</p>
-                      </div>
+                  <!-- <p>
+                    For a brochure on spiritual direction, <a href="spiritual-direction-2019.pdf" target="_blank" class="page-link">click here.</a>
+                  </p> -->
+
+                  <!-- <hr class="trademark-line u-margin-top-small"> -->
 
                 </div>
 
                 </section>
-
                 
 
 <footer class="footer">
@@ -315,9 +321,7 @@
             </div>
         </footer>
             </div>
-
         </div>
-
         <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 
     </body>
