--- a/mind-benefits.html
+++ b/mind-benefits.html
@@ -200,25 +200,20 @@
             <div class="col-3-of-3">
                 <section class="section-inside">
                   <div class="section-inside-header">
-                    <h5 class="heading-five">Specialized Audiences &mdash; Professional Development</h5>
+                    <h5 class="heading-five">Practical Life Issues &mdash; Personal Relationships</h5>
+                    <!-- <h1 class="heading-one hr-overview">Dreams and Imagery</h1> -->
 
                     <div class="inside-nav-container">
                       <hr class="work-hr">
                     <ul class="inside-nav">
 
-                      <li><a href="pro-writersgen.html">Overview</a></li>
+                      <li><a href="mindfulness.html">Overview</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="gen-writing.html">General Writing</a></li>
+                      <li><a href="mind-benefits.html">Benefits</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="writ-edu.html">Education</a></li>
-                      <span class="vert">&vert;</span>
-                      <li><a href="mem-writing.html">Memoir Writing</a></li>
-                      <span class="vert">&vert;</span>
-                      <li><a href="writ-poetry.html">Poetry</a></li>
-                      <span class="vert">&vert;</span>
-                      <li><a href="writ-endorse.html">Endorsements</a></li>
-                      <span class="vert">&vert;</span>
-                      <li><a href="writ-articles.html">Writers' Statements</a></li>
+                      <li><a href="mind-endorse.html">Endorsement</a></li>
+                      <!-- <span class="vert">&vert;</span>
+                      <li><a href="mind-articles.html">Articles</a></li> -->
 
                     </ul>
                     <hr class="work-hr">
@@ -229,18 +224,96 @@
                   </div>
 
                 <div class="section-inside-content">
-                  <h1>General Writing</h1>
+                  <h1>Benefits</h1>
 
                   <p>
-          General writing includes all literary forms, ranging from nonfiction to poetry to prose. Writing is a craft that requires self-awareness and skill, creativity and resolve. The Progoff Intensive Journal Method is a tool that puts you in contact with your inner processes and opens new doors of self-discovery and insight. It can help you crystallize an idea for your writing, and guide you in a useful direction for your writing projects. The symbols and imagery developed through the use of the Intensive Journal method create a flow of information that can free you to write about whatever comes to mind, creating work that is spontaneous and open. The movement and freedom the method provides opens up endless creative possibilities, helping you overcome writer’s block or just gain a new perspective on your work.
+                    The Intensive Journal method provides a compatible approach for your mindfulness practice for
+obtaining self-awareness about your life experiences. Summarized below are some of the techniques
+that can be applied through Intensive Journal exercises to create many possible benefits.
                   </p>
 
-                  <div class="quotes">
-                    <blockquote>
-                  "I am convinced that aspiring writers can get new direction and inspiration from attending a Progoff Intensive Journal workshop. You can learn some helpful techniques such as the dialogue process for which Progoff is a leading authority. The method spurs your creativity as you access ideas and thoughts inside yourself as well listen to your intuition. The Intensive Journal method can be used in an ongoing way to help you clarify how best to proceed as your writing project evolves. Helping you realize your creative potential as a writer is a great gift of the Intensive Journal method."</blockquote>
-                    <p class="right-span">Cornelius Vahle, Jr.<br>
-                    San Francisco, CA</p>
-                      </div>
+<h6>Compatible Approaches with Mindfulness</h6>
+
+<ul>
+  <li>
+    Adopt a non-judgmental attitude, becoming receptive to working
+with a full range of experiences and feelings, as a basis for
+developing a foundation for your life
+  </li>
+  <li>
+    Focus inward in a neutral, unbiased way to the source of direct
+knowing, your true inner self.
+  </li>
+  <li>
+    Adopt no expectations or time frames for answers to issues or
+making decisions; awareness comes when it is ready to reveal
+itself as you adopt an approach of passive receptivity.
+  </li>
+  <li>
+    Work in silence to become centered and focused to access your
+inner self.
+  </li>
+  <li>
+    Employ a non-analytical approach, avoiding preconceived and
+circular ways of thinking, to achieve creative breakthroughs of
+awareness
+  </li>
+  <li>
+    Work in total privacy to be free to be honest and true to your self.
+  </li>
+</ul>
+
+<h6 class="u-margin-top-small">Writing Exercises from the Intensive Journal Workbook</h6>
+
+<ul>
+  <li>
+    Benefit from a deepening workshop experience away from your
+  daily routine to connect with your inner self.
+  </li>
+  <li>
+    Learn how these writing exercises help you access and connect with
+your inner process to explore your life without assumptions as you
+look at your life with curiosity and from different perspectives.
+  </li>
+  <li>
+    Apply a neutral meditative process for becoming centered and
+deepening your inward journey. Employ advanced meditation
+techniques that utilize rhythmic breathwork for stilling the self
+that enables you to go to progressively deeper levels.
+  </li>
+</ul>
+
+<h6 class="u-margin-top-small">Possible Benefits</h6>
+
+<ul>
+  <li>
+    Connect with your true self, your inner nature.
+  </li>
+  <li>
+    Develop a foundation for your life for future decision making; work
+  through issues over time within the context of your entire life.
+  </li>
+  <li>
+    Realize new perspectives about different facets of your life that are
+    validated by your inner experience
+  </li>
+  <li>
+    Develop a more integrated life using Dr. Progoff's <a href="feedback.html" class="page-link">Journal Feedback
+process</a>as material from different areas of life comes
+together to develop additional awarenesses.
+  </li>
+  <li>
+    Deepen your life journey as you view it without judgment as an
+ongoing evolving process of growth and development
+  </li>
+  <li>
+    Increase your attentiveness to recognizing different facets of
+experience. Become more receptive to listening to your inner voice.
+  </li>
+</ul>
+
+
+
 
                 </div>
 
@@ -317,8 +390,6 @@
             </div>
 
         </div>
-
-        <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 
     </body>
 </html>
