--- a/mind-endorse.html
+++ b/mind-endorse.html
@@ -200,25 +200,20 @@
             <div class="col-3-of-3">
                 <section class="section-inside">
                   <div class="section-inside-header">
-                    <h5 class="heading-five">Specialized Audiences &mdash; Professional Development</h5>
+                    <h5 class="heading-five">Practical Life Issues &mdash; Personal Relationships</h5>
+                    <!-- <h1 class="heading-one hr-overview">Dreams and Imagery</h1> -->
 
                     <div class="inside-nav-container">
                       <hr class="work-hr">
                     <ul class="inside-nav">
 
-                      <li><a href="pro-writersgen.html">Overview</a></li>
+                      <li><a href="mindfulness.html">Overview</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="gen-writing.html">General Writing</a></li>
+                      <li><a href="mind-benefits.html">Benefits</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="writ-edu.html">Education</a></li>
-                      <span class="vert">&vert;</span>
-                      <li><a href="mem-writing.html">Memoir Writing</a></li>
-                      <span class="vert">&vert;</span>
-                      <li><a href="writ-poetry.html">Poetry</a></li>
-                      <span class="vert">&vert;</span>
-                      <li><a href="writ-endorse.html">Endorsements</a></li>
-                      <span class="vert">&vert;</span>
-                      <li><a href="writ-articles.html">Writers' Statements</a></li>
+                      <li><a href="mind-endorse.html">Endorsement</a></li>
+                      <!-- <span class="vert">&vert;</span>
+                      <li><a href="mind-articles.html">Articles</a></li> -->
 
                     </ul>
                     <hr class="work-hr">
@@ -229,18 +224,21 @@
                   </div>
 
                 <div class="section-inside-content">
-                  <h1>General Writing</h1>
+                  <h1>Endorsement</h1>
 
-                  <p>
-          General writing includes all literary forms, ranging from nonfiction to poetry to prose. Writing is a craft that requires self-awareness and skill, creativity and resolve. The Progoff Intensive Journal Method is a tool that puts you in contact with your inner processes and opens new doors of self-discovery and insight. It can help you crystallize an idea for your writing, and guide you in a useful direction for your writing projects. The symbols and imagery developed through the use of the Intensive Journal method create a flow of information that can free you to write about whatever comes to mind, creating work that is spontaneous and open. The movement and freedom the method provides opens up endless creative possibilities, helping you overcome writer’s block or just gain a new perspective on your work.
-                  </p>
+-----------------
+to be written
+----------------
 
-                  <div class="quotes">
-                    <blockquote>
-                  "I am convinced that aspiring writers can get new direction and inspiration from attending a Progoff Intensive Journal workshop. You can learn some helpful techniques such as the dialogue process for which Progoff is a leading authority. The method spurs your creativity as you access ideas and thoughts inside yourself as well listen to your intuition. The Intensive Journal method can be used in an ongoing way to help you clarify how best to proceed as your writing project evolves. Helping you realize your creative potential as a writer is a great gift of the Intensive Journal method."</blockquote>
-                    <p class="right-span">Cornelius Vahle, Jr.<br>
-                    San Francisco, CA</p>
-                      </div>
+                  <blockquote>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </blockquote>
+                  <p class="right-span"> Ira Progoff, PhD</p>
+
+
+
+
+
 
                 </div>
 
@@ -317,8 +315,6 @@
             </div>
 
         </div>
-
-        <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 
     </body>
 </html>
