--- a/pro-writerstech.html
+++ b/pro-writerstech.html
@@ -206,19 +206,11 @@
                       <hr class="work-hr">
                     <ul class="inside-nav">
 
-                      <li><a href="pro-writersgen.html">Overview</a></li>
+                      <li><a href="pro-writerstech.html">Overview</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="gen-writing.html">General Writing</a></li>
+                      <li><a href="tech-benefits.html">Benefits</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="writ-edu.html">Education</a></li>
-                      <span class="vert">&vert;</span>
-                      <li><a href="mem-writing.html">Memoir Writing</a></li>
-                      <span class="vert">&vert;</span>
-                      <li><a href="writ-poetry.html">Poetry</a></li>
-                      <span class="vert">&vert;</span>
-                      <li><a href="writ-endorse.html">Endorsements</a></li>
-                      <span class="vert">&vert;</span>
-                      <li><a href="writ-articles.html">Writers' Statements</a></li>
+                      <li><a href="tech-endorse.html">Endorsements</a></li>
 
                     </ul>
                     <hr class="work-hr">
@@ -229,18 +221,26 @@
                   </div>
 
                 <div class="section-inside-content">
-                  <h1>General Writing</h1>
+                  <h1>Technical Writing</h1>
 
                   <p>
-          General writing includes all literary forms, ranging from nonfiction to poetry to prose. Writing is a craft that requires self-awareness and skill, creativity and resolve. The Progoff Intensive Journal Method is a tool that puts you in contact with your inner processes and opens new doors of self-discovery and insight. It can help you crystallize an idea for your writing, and guide you in a useful direction for your writing projects. The symbols and imagery developed through the use of the Intensive Journal method create a flow of information that can free you to write about whatever comes to mind, creating work that is spontaneous and open. The movement and freedom the method provides opens up endless creative possibilities, helping you overcome writer’s block or just gain a new perspective on your work.
+          Technical writing requires not only a knowledge of the subject, but also a level of creativity, of ingenuity with words that keeps the work concise and clear. The Intensive Journal method can help a writer crystallize an idea and move it through the various stages until completion. The method clarifies intent of both the writer and the work, facilitating its execution and conclusion. The Intensive Journal method accesses an inner flow of creativity that can break down writer’s block and help create works that are both straightforward and significant.
                   </p>
 
                   <div class="quotes">
                     <blockquote>
-                  "I am convinced that aspiring writers can get new direction and inspiration from attending a Progoff Intensive Journal workshop. You can learn some helpful techniques such as the dialogue process for which Progoff is a leading authority. The method spurs your creativity as you access ideas and thoughts inside yourself as well listen to your intuition. The Intensive Journal method can be used in an ongoing way to help you clarify how best to proceed as your writing project evolves. Helping you realize your creative potential as a writer is a great gift of the Intensive Journal method."</blockquote>
-                    <p class="right-span">Cornelius Vahle, Jr.<br>
-                    San Francisco, CA</p>
+                  "As the managing editor of a leading scientific journal and as an author’s editor, I have spent my professional life working with writers; I am also a writer of fiction and poetry, so I am aware that many writers from time to time feel blocked with a writing project. I have found the Progoff Intensive Journal method to be an invaluable tool for any writer, whether the writing to be done is technical or scientific or of a more creative nature, by giving the writer access at any time to the creative inner resources from which all writing comes.</blockquote>
+                  <blockquote class="u-margin-top-small">
+                    Of particular value is the Dialogue with Works, in which one is able to use a specific technique to engage in a Dialogue with the writing project in question, allowing it to speak of its focus and intention and purpose. While ultimately, scientific or technical protocols shape the content and expression of the ideas, the Dialogue process, in my experience, invariable serves to move the writer past the block, and back into the fluid writing process that is necessary to carry the writing project to completion. I can think of no more powerful or dependably useful tool for a writer than the Intensive Journal method. I recommend it to all my colleagues and clients."
+                  </blockquote>
+                    <p class="right-span">-Carolyn Kelley Williams<br>
+                    Managing Editor, International Journal of Gynecology and Obstetrics<br>
+                  Senior Editor of Publications, Northwestern University Medical School</p>
                       </div>
+
+                      <p>
+                        For more information about this subject, <a href="stm-writers-2019.pdf" target="_blank" class="page-link">click here.</a>
+                      </p>
 
                 </div>
 
