--- a/tech-benefits.html
+++ b/tech-benefits.html
@@ -206,19 +206,11 @@
                       <hr class="work-hr">
                     <ul class="inside-nav">
 
-                      <li><a href="pro-writersgen.html">Overview</a></li>
+                      <li><a href="pro-writerstech.html">Overview</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="gen-writing.html">General Writing</a></li>
+                      <li><a href="tech-benefits.html">Benefits</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="writ-edu.html">Education</a></li>
-                      <span class="vert">&vert;</span>
-                      <li><a href="mem-writing.html">Memoir Writing</a></li>
-                      <span class="vert">&vert;</span>
-                      <li><a href="writ-poetry.html">Poetry</a></li>
-                      <span class="vert">&vert;</span>
-                      <li><a href="writ-endorse.html">Endorsements</a></li>
-                      <span class="vert">&vert;</span>
-                      <li><a href="writ-articles.html">Writers' Statements</a></li>
+                      <li><a href="tech-endorse.html">Endorsements</a></li>
 
                     </ul>
                     <hr class="work-hr">
@@ -229,18 +221,88 @@
                   </div>
 
                 <div class="section-inside-content">
-                  <h1>General Writing</h1>
+                  <h1>Benefits</h1>
 
                   <p>
-          General writing includes all literary forms, ranging from nonfiction to poetry to prose. Writing is a craft that requires self-awareness and skill, creativity and resolve. The Progoff Intensive Journal Method is a tool that puts you in contact with your inner processes and opens new doors of self-discovery and insight. It can help you crystallize an idea for your writing, and guide you in a useful direction for your writing projects. The symbols and imagery developed through the use of the Intensive Journal method create a flow of information that can free you to write about whatever comes to mind, creating work that is spontaneous and open. The movement and freedom the method provides opens up endless creative possibilities, helping you overcome writer’s block or just gain a new perspective on your work.
+                    The Intensive Journal method provides specific techniques through our integrated system of writing
+              exercises to help you:
                   </p>
 
-                  <div class="quotes">
-                    <blockquote>
-                  "I am convinced that aspiring writers can get new direction and inspiration from attending a Progoff Intensive Journal workshop. You can learn some helpful techniques such as the dialogue process for which Progoff is a leading authority. The method spurs your creativity as you access ideas and thoughts inside yourself as well listen to your intuition. The Intensive Journal method can be used in an ongoing way to help you clarify how best to proceed as your writing project evolves. Helping you realize your creative potential as a writer is a great gift of the Intensive Journal method."</blockquote>
-                    <p class="right-span">Cornelius Vahle, Jr.<br>
-                    San Francisco, CA</p>
-                      </div>
+                  <h6 class="u-margin-top-small-2">Enhance Your Writing Skills</h6>
+                  <ul>
+                    <li>
+                      Apply practical methods to reflect on the quality of your STM writing skills
+                    </li>
+                    <li>
+                      Examine your development in a private non-judgmental environment.
+                    </li>
+                    <li>
+                      Reflect on work-related issues from various viewpoints
+                    </li>
+                  </ul>
+
+                  <h6 class="u-margin-top-small-2">Reconnect with Your Commitment to Writing</h6>
+                  <ul>
+                    <li>
+                      Reconnect with the underlying reasons that you entered
+the STM writing profession
+                    </li>
+                    <li>
+                      Obtain renewed energy, vitality and sense of purpose;
+discover new interests and ways to view your profession
+                    </li>
+                  </ul>
+
+                  <h6 class="u-margin-top-small-2">Foster Relationships in the Workplace Environment</h6>
+                  <ul>
+                    <li>
+                      Improve communication and interpersonal skills; become
+  better able to listen to and relate to other professionals
+                    </li>
+                    <li>
+                      Learn techniques to deepen understanding as a way to build
+      bridges in your relationships with colleagues
+                    </li>
+                  </ul>
+
+                  <h6 class="u-margin-top-small-2">Stimulate Your Productivity</h6>
+                  <ul>
+                    <li>
+                      Stimulate creative and intuitive capacities ; gain access to a rich
+        source of knowledge for developing new insights.
+                    </li>
+                    <li>
+                      Work through personal issues to allow for greater focus and
+    enhanced relationships in the workplace.
+                    </li>
+                  </ul>
+
+                  <h6 class="u-margin-top-small-2">Develop Your Career Path</h6>
+                  <ul>
+                    <li>
+                      Gain perspectives influencing the direction and continuity of
+  your career while developing new goals and opportunities.
+                    </li>
+                    <li>
+                  Identify skills and interests for becoming more productive
+                    </li>
+                  </ul>
+
+                  <h6 class="u-margin-top-small-2">Reduce Stress and Prevent Burnout</h6>
+                  <ul>
+                    <li>
+                      Work through workplace-related issues and personal conflicts
+so the professional environment becomes less stressful.
+                    </li>
+                    <li>
+                      Resolve issues and make sense of your present work situation
+    to build momentum and prevent burnout.
+                    </li>
+                  </ul>
+
+
+
+
 
                 </div>
 
