--- a/tech-endorse.html
+++ b/tech-endorse.html
@@ -206,19 +206,11 @@
                       <hr class="work-hr">
                     <ul class="inside-nav">
 
-                      <li><a href="pro-writersgen.html">Overview</a></li>
+                      <li><a href="pro-writerstech.html">Overview</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="gen-writing.html">General Writing</a></li>
+                      <li><a href="tech-benefits.html">Benefits</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="writ-edu.html">Education</a></li>
-                      <span class="vert">&vert;</span>
-                      <li><a href="mem-writing.html">Memoir Writing</a></li>
-                      <span class="vert">&vert;</span>
-                      <li><a href="writ-poetry.html">Poetry</a></li>
-                      <span class="vert">&vert;</span>
-                      <li><a href="writ-endorse.html">Endorsements</a></li>
-                      <span class="vert">&vert;</span>
-                      <li><a href="writ-articles.html">Writers' Statements</a></li>
+                      <li><a href="tech-endorse.html">Endorsements</a></li>
 
                     </ul>
                     <hr class="work-hr">
@@ -229,17 +221,35 @@
                   </div>
 
                 <div class="section-inside-content">
-                  <h1>General Writing</h1>
+                  <h1>Endorsements BY STM Writers</h1>
 
-                  <p>
-          General writing includes all literary forms, ranging from nonfiction to poetry to prose. Writing is a craft that requires self-awareness and skill, creativity and resolve. The Progoff Intensive Journal Method is a tool that puts you in contact with your inner processes and opens new doors of self-discovery and insight. It can help you crystallize an idea for your writing, and guide you in a useful direction for your writing projects. The symbols and imagery developed through the use of the Intensive Journal method create a flow of information that can free you to write about whatever comes to mind, creating work that is spontaneous and open. The movement and freedom the method provides opens up endless creative possibilities, helping you overcome writer’s block or just gain a new perspective on your work.
-                  </p>
 
                   <div class="quotes">
                     <blockquote>
-                  "I am convinced that aspiring writers can get new direction and inspiration from attending a Progoff Intensive Journal workshop. You can learn some helpful techniques such as the dialogue process for which Progoff is a leading authority. The method spurs your creativity as you access ideas and thoughts inside yourself as well listen to your intuition. The Intensive Journal method can be used in an ongoing way to help you clarify how best to proceed as your writing project evolves. Helping you realize your creative potential as a writer is a great gift of the Intensive Journal method."</blockquote>
-                    <p class="right-span">Cornelius Vahle, Jr.<br>
-                    San Francisco, CA</p>
+                      "The Intensive Journal method has been an invaluable benefit to me in developing my professional life, providing a place and a practice for reflecting on my career in the context of my whole life, bringing balance when
+            responsibilities threatened to become all-consuming, and serving as an antidote to burn-out. It has provided
+            techniques to navigate work-place conflicts; consider the pros and cons of career changes; and perceive the
+            deeper meaning of my work and its social value. Without this marvelous tool, my life would not have the depth
+            and richness the Intensive Journal process has provided—and continues to provide—as a life-long enhancement
+            for working and living well."</blockquote>
+                    <p class="right-span">C Kelley Williams<br>
+                    Managing Editor, International Journal of Gynecology and Obstetrics<br>
+                  Former President, American Medical Writers Association</p>
+                      </div>
+
+                  <div class="quotes">
+                    <blockquote>
+                      "I never expected to become a medical publishing professional, and yet here I am with more than 15 years’ worth
+  of experience in the field. Learning the Intensive Journal method has given me an indispensable tool for processing, and ultimately appreciating, how seemingly disparate interests and passions have woven together throughout my life to manifest in the unique ways that they have, including becoming an editor in the field of neurology.</blockquote>
+                  <blockquote class="u-margin-top-small">
+                    "Through my work in the Intensive Journal process, I have gained a greater sense of peace and even awe about
+    the arc of my professional life in the context of my life as a whole. The Intensive Journal method has helped me
+    achieve clearer insight into the value to both myself and to the larger world that my career path in medical
+    publishing has fostered. It has helped me better appreciate the ways my work contributes value to the medical
+    community and ultimately has positive impact on patient care."
+                  </blockquote>
+                    <p class="right-span">Andrea Weiss<br>
+                    Executive Editor of Education and News Publications, American Academy of Neurology</p>
                       </div>
 
                 </div>
