--- a/writ-articles.html
+++ b/writ-articles.html
@@ -229,18 +229,65 @@
                   </div>
 
                 <div class="section-inside-content">
-                  <h1>General Writing</h1>
+                  <h1>Finding My Voice as a Writer</h1>
+                  <p><em>Cornelius Vahle, Jr.</em></p>
 
                   <p>
-          General writing includes all literary forms, ranging from nonfiction to poetry to prose. Writing is a craft that requires self-awareness and skill, creativity and resolve. The Progoff Intensive Journal Method is a tool that puts you in contact with your inner processes and opens new doors of self-discovery and insight. It can help you crystallize an idea for your writing, and guide you in a useful direction for your writing projects. The symbols and imagery developed through the use of the Intensive Journal method create a flow of information that can free you to write about whatever comes to mind, creating work that is spontaneous and open. The movement and freedom the method provides opens up endless creative possibilities, helping you overcome writer’s block or just gain a new perspective on your work.
+          I took my first Progoff Intensive Journal workshop in 1982. At the time I was trying to find my voice as a writer. I had taken a variety of writing workshops, including personal essay, creative writing and fiction, but had not yet moved forward in getting my material published.
                   </p>
 
-                  <div class="quotes">
-                    <blockquote>
-                  "I am convinced that aspiring writers can get new direction and inspiration from attending a Progoff Intensive Journal workshop. You can learn some helpful techniques such as the dialogue process for which Progoff is a leading authority. The method spurs your creativity as you access ideas and thoughts inside yourself as well listen to your intuition. The Intensive Journal method can be used in an ongoing way to help you clarify how best to proceed as your writing project evolves. Helping you realize your creative potential as a writer is a great gift of the Intensive Journal method."</blockquote>
-                    <p class="right-span">Cornelius Vahle, Jr.<br>
-                    San Francisco, CA</p>
-                      </div>
+                  <p>
+                My career as a writer began to take shape after I attended an Intensive Journal workshop. I found the process to be an excellent way of connecting with myself and working through various issues. The Intensive Journal method contains many useful techniques; one of the more valuable exercises is a dialogue process to deepen my understanding of specific areas of life, including my writing projects.
+                  </p>
+
+                  <p>
+                As a result, things began to click for me; I gained greater clarity on what I wanted to write. Soon, I was producing profiles of leading figures in the Consciousness Movement for a spiritual magazine.
+                  </p>
+
+                  <p>
+                  Using the Intensive Journal method was then instrumental in leading me to write biographies of leaders of spiritual movements. Since the early 1990s, I have written three books dealing with these subjects: Open at the Top: The Life of Ernest Holmes; Torch-bearer to Light the Way: The Life of Myrtle Fillmore; and The Unity Movement: Its Evolution and Spiritual Teaching.
+                  </p>
+
+                  <p>
+                  Then, in 2001, I moved into a totally different area, sports, and wrote Smart Baseball: How Professionals Play the Mental Game. This book was co-authored with Buddy Bell, the manager of the Kansas City Royals, and was published by St. Martin’s Press in 2003. Yes, the switch to writing about sports also came out of an Intensive Journal workshop. I had no idea that I wanted to move in this direction until a baseball book demanded to be written during a dialogue exercise that I did at a workshop in 2001.
+                  </p>
+
+                  <p>
+                  I am convinced that aspiring writers can get new direction and inspiration from attending a Progoff Intensive Journal workshop. You can learn some helpful techniques such as the dialogue process for which Progoff is a leading authority. The method spurs your creativity as you access ideas and thoughts inside yourself as well listen to your intuition. The Intensive Journal method can be used in an ongoing way to help you clarify how best to proceed as your writing project evolves. Helping you realize your creative potential as a writer is a great gift of the Intensive Journal method.
+                  </p>
+
+
+                  <h1 class="u-margin-top-medium">Myself as a Poet</h1>
+                  <p><em>Sally Allen McNall, Ph.D.</em></p>
+
+                  <p>
+          I first went to an Intensive Journal workshop in 1978, when I was just out of graduate school, and had been writing almost nothing but papers, tests and lectures for ten years. I was aware that there was something wrong with this, for me anyway, but I had no idea how to find my way back to identifying myself as a poet-as I had when I was younger.
+                  </p>
+
+                  <p>
+                  I certainly did not expect that one workshop would teach me that lesson, but it did. Because of the way the Intensive Journal workshop showed me how to access imagery and symbol, and then to connect them to larger systems of personal meaning, I began to write poetry seriously again the morning of the second day of the workshop, in the workshop. This was not even, I was told, against the rules! I have gone only two years without a workshop since then, and many years I have been to two or even three-besides the work I do on my own.
+                  </p>
+
+                  <p>
+                  Indeed, the Intensive Journal insistence on being non-judgmental about what you write, and the many ways it gives you to follow up on your insights and inspirations, freed me in a number of ways. Journal work made it possible for me to alter daily-life circumstances that stood in the way of my writing. Within three years I was part of a working writer’s group, and getting poems published regularly. It's been twenty-five years since I first said to someone "Yes, I'm a poet," and I have two chapbooks and a book (two of these national contest winners) to show for it, not to speak of a great deal of skill in nurturing the talent and sensibility of other writers, much of it drawn from the Intensive Journal work.
+                  </p>
+
+                  <p>
+                    For example, are you a fiction writer, or a playwright? Here are some ways to discover how to do the best dialogue you have ever done. If you haven't written anything you like for months, here are two exercises that will connect you to what is really your current subject matter. Or here are two that will clear your mind of depression or anxiety. (One of the real problems with ordinary journal writing is that it permits us to recycle the same issue over and over again, making no artistic, let alone spiritual progress. The Intensive Journal method doesn't permit that. You take your issues in directions that open the possibility of solutions every time.) Or here are three exercises that will illuminate and eventually resolve your conflict with the work you have bogged down in.
+                  </p>
+
+                  <p>
+                    I am in two writing groups currently, and one of the most valuable things I establish when I work with others is the free flow I learn in Intensive Journal workshops-your work is yours, I cannot tell you how to do it (non-judgmental) and therefore it's possible for us to share all our ideas about each other's work in perfect safety. (In a Journal workshop you practice privacy in a community. That is an excellent exercise for any writer.)
+                  </p>
+
+                  <p>
+                    I also teach creative writing to first semester college freshman, using Intensive Journal related techniques for centering and discovery. Of course, I have to give them grades, but I know that they gain confidence in the class from the freedom with their writing that I have learned to give them. There is much more available to each of us as writers than we know! The Intensive Journal method is the best I know of for finding that unfailing source.
+                  </p>
+
+                  <p><em>
+                    Sally Allen McNall, Ph.D., author of How to Behave at the Zoo and Other Lessons; Rescue; and Trying to Write a Poem Without the Word Blood In It
+                  </em></p>
+
 
                 </div>
 
