--- a/writ-edu.html
+++ b/writ-edu.html
@@ -218,7 +218,7 @@
                       <span class="vert">&vert;</span>
                       <li><a href="writ-endorse.html">Endorsements</a></li>
                       <span class="vert">&vert;</span>
-                      <li><a href="writ-articles.html">Articles</a></li>
+                      <li><a href="writ-articles.html">Writers' Statements</a></li>
 
                     </ul>
                     <hr class="work-hr">
